--- a/src/index.html
+++ b/src/index.html
@@ -140,10 +140,10 @@
       <div class="container">
         <div class="info_link">
           <a href="#" class="support_link">Служба поддержки</a>
-          <a href="#" class="privacy_link">Политика конфиденциальности</a>
+          <a href="#" class="privacy_link">Политика конфиденциальности дисн</a>
         </div>
         <div class="info_text">
-          Позвоните нам 8-800-555-01-21
+          Позвоните нам 8-800-555-01-21 
         </div>
       </div>
     </section>
